# spec-rrv-fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
day2/: task01.py  task02.py  task03.py  task04.py  task05.py  task06.py
day3/: exercise_2.md  main.py
day4/: alembic.ini
day4/alembic/: env.py
day4/alembic/versions/: 670cbc51a5d1_initial_migration.py
day4/exercise_1_pydantic/: main.py
day4/exercise_2_sqlite/: db.py  exercise_1.ipynb  main.py  models.py  schemas.py
day4/exercise_2_sqlite/routers/: __init__.py  books.py
day5/todos/: compose.yaml  config.py  main.py  schemas.py
day5/todos/routes/: auth.py  todos.py
