[project]
name = "spec-rrv-fastapi"
version = "0.1.0"
description = "Practice for specialist.ru-FastAPI"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "fastapi>=0.135.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
